--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,15 @@
   float: left;
 }
 
+.loader-container {
+  position: fixed;
+  left: 0px;
+  top: 250px;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
